fix: styling on smaller screen for pagination and refactor the sorts and filter functionalities

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -138,6 +138,8 @@
 }
 
 @theme {
+	--breakpoint-xs: 25rem;
+
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
 	--color-card: var(--card);
